syntax = "proto3";

package tracing;

service SkyTracing {
    rpc pushMsgs(stream StreamReqData) returns (stream StreamResData) {}
}

message StreamReqData {
    string data = 1;
}

message StreamResData {
    string data = 1;
}